# cloud-traces-comparison

./: LICENSE  Makefile  README.md  pyproject.toml  setup.cfg
docs/: data_collection.md  data_storage.md  installation.md
docs/demo/: runner-image.ipynb  runner-numeric.ipynb
example-tasks/: 330587238433-1082-76638000000-2496549000000.csv  330587238433-1322-18243000000-2678700000000.csv  330587238433-2-54558000000-2665598000000.csv  330587238433-249-20382000000-2678811000000.csv  330587238433-258-4171000000-2671388000000.csv  330587238433-323-37223000000-2672721000000.csv  330587238433-360-26456000000-2678700000000.csv  330587238433-443-30392000000-2665618000000.csv  330587238433-542-14153000000-2653791000000.csv  330587238433-677-14487000000-2653791000000.csv  330587238433-746-46292000000-2657770000000.csv  330587238433-865-10247000000-2658345000000.csv  330587238433-871-135545000000-2671403000000.csv  330587238433-881-6423000000-2670397000000.csv  330587238433-987-19011000000-2612447000000.csv  330587272057-234-13056000000-2502314000000.csv  330587272057-30-29194000000-2596379000000.csv  371808617014-64-300000000-1440737000000.csv  371808617014-66-300000000-1440737000000.csv  375101861330-1-43091000000-647327000000.csv  399595509249-1124-2495316000000-2678700000000.csv  399595509249-1638-2495052000000-2678700000000.csv  399595509249-1643-2495051000000-2678700000000.csv  399595509249-1830-2495248000000-2678700000000.csv  399595509249-1849-2495339000000-2678700000000.csv  399595509249-2033-2495247000000-2678700000000.csv  399595509249-2262-2495319000000-2678700000000.csv  399595509249-2347-2495294000000-2678700000000.csv  399595509249-2392-2495319000000-2678700000000.csv  399595509249-3081-2495314000000-2678700000000.csv  399595509249-3791-2495330000000-2678700000000.csv  399595509249-3818-2495315000000-2678700000000.csv  399595509249-4103-2495231000000-2678700000000.csv  399595509249-4465-2495214000000-2678700000000.csv  399595509249-4775-2495243000000-2678700000000.csv  399595509249-5067-2495335000000-2678700000000.csv  399595509249-5078-2495214000000-2678700000000.csv  399595509249-5412-2495244000000-2678700000000.csv  399595509249-6027-2495335000000-2678700000000.csv  399595509249-6287-2495281000000-2678700000000.csv  (+15 more)
experiment/: metadata.md
gtd/: utils.py
gtd/cli/: commands.py  download.py  export.py  main.py  parser.py  ts.py  utils.py
gtd/comparator/: __init__.py  calculators.py  comparator.py  cosine.py  dtwl2.py  (+7 more)
processing/: create_timeseries.py  store_timeseries.py
tools/: README.md  downloader.py  exporter.py  requirements.txt
(+80 files in other folders)
