[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "gtd"
version = "0.0.1"
description = ""
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT License"}
authors = [
    {name = "Konstantinos Papaioannou", email = "konstantinos.papaioannou@imdea.org"}
]
keywords = ["google trace", "analytics"]
classifiers = [
    "Development Status :: 1 - Planning",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
    "gsutil>=5.16",
    "numpy>=1.22.4",
    "pandas>=1.5.1",
    "sqlalchemy>=1.4.43",
    "mysql-connector-python>=8.0.31",
    "scikit-image"
]

[project.optional-dependencies]
dev = ["black", "flake8", "isort", "mypy"]

[project.urls]
"Homepage" = "https://gitlab.software.imdea.org/muse-lab/google-trace-dataset"
"Bug Tracker" = "https://gitlab.software.imdea.org/muse-lab/google-trace-dataset/issues"

[project.scripts]
gtd = "gtd.cli.main:main"

[tool.isort]
known_first_party = ["gtd"]
line_length = 80
multi_line_output = 3
profile = "black"
py_version = 38
src_paths = ["gtd", "tests"]
use_parentheses = true

[tool.black]
line-length = 80
target-version = ['py38']

[tool.mypy]
files = ["gtd"]
ignore_missing_imports = true
python_version = "3.8"
# Disallow dynamic typing
disallow_any_unimported = false
disallow_any_expr = false
disallow_any_decorated = false
disallow_any_explicit = false
disallow_any_generics = false
disallow_subclassing_any = false
# Untyped definitions and calls
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
# None and Optional handling
no_implicit_optional = true
strict_optional = true
# Configuring warnings
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_return_any = true
warn_unreachable = true
# Suppressing errors
ignore_errors = false
# Miscellaneous strictness flags
allow_untyped_globals = false
allow_redefinition = false
local_partial_types = false
implicit_reexport = true
strict_equality = true
# Configuring error messages
show_error_context = false
show_column_numbers = false
show_error_codes = true
